refactor: revisar e limpar código